migration parts of integration tests