@@ -17,14 +17,15 @@
 package io.dockstore.client.cli;
 
 import static io.openapi.api.impl.ToolsApiServiceImpl.DESCRIPTOR_FILE_SHA256_TYPE_FOR_TRS;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.common.collect.Lists;
+import io.dockstore.client.cli.BaseIT.TestStatus;
 import io.dockstore.common.CommonTestUtilities;
 import io.dockstore.common.ConfidentialTest;
 import io.dockstore.common.DescriptorLanguage;
@@ -35,6 +36,7 @@ import io.dockstore.openapi.client.model.ImageData;
 import io.dockstore.openapi.client.model.ToolVersion;
 import io.dockstore.openapi.client.model.WorkflowSubClass;
 import io.dockstore.webservice.DockstoreWebserviceApplication;
+import io.dockstore.webservice.core.SourceFile;
 import io.dockstore.webservice.helpers.AppToolHelper;
 import io.dockstore.webservice.jdbi.FileDAO;
 import io.swagger.client.ApiClient;
@@ -48,19 +50,21 @@ import io.swagger.client.model.WorkflowVersion;
 import io.swagger.model.DescriptorType;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.hibernate.context.internal.ManagedSessionContext;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.contrib.java.lang.system.ExpectedSystemExit;
-import org.junit.contrib.java.lang.system.SystemErrRule;
-import org.junit.contrib.java.lang.system.SystemOutRule;
 import org.junit.experimental.categories.Category;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import uk.org.webcompere.systemstubs.jupiter.SystemStub;
+import uk.org.webcompere.systemstubs.jupiter.SystemStubsExtension;
+import uk.org.webcompere.systemstubs.stream.SystemErr;
+import uk.org.webcompere.systemstubs.stream.SystemOut;
+import uk.org.webcompere.systemstubs.stream.output.NoopStream;
 
+@ExtendWith(SystemStubsExtension.class)
+@ExtendWith(TestStatus.class)
 @Category({ ConfidentialTest.class, WorkflowTest.class })
 public class GitHubWorkflowIT extends BaseIT {
     public static final String DOCKSTORE_TEST_USER_2_HELLO_DOCKSTORE_NAME = "DockstoreTestUser2/hello-dockstore-workflow";
@@ -68,19 +72,16 @@ public class GitHubWorkflowIT extends BaseIT {
         SourceControl.GITHUB.toString() + "/" + DOCKSTORE_TEST_USER_2_HELLO_DOCKSTORE_NAME;
     private final String toolAndWorkflowRepoToolPath = "DockstoreTestUser2/test-workflows-and-tools/md5sum";
     private static final String DOCKER_IMAGE_SHA_TYPE_FOR_TRS = "sha-256";
-    @Rule
-    public final SystemOutRule systemOutRule = new SystemOutRule().enableLog().muteForSuccessfulTests();
-    @Rule
-    public final SystemErrRule systemErrRule = new SystemErrRule().enableLog().muteForSuccessfulTests();
-    @Rule
-    public final ExpectedSystemExit systemExit = ExpectedSystemExit.none();
-    @Rule
-    public final ExpectedException thrown = ExpectedException.none();
+
+    @SystemStub
+    public final SystemOut systemOutRule = new SystemOut(new NoopStream());
+    @SystemStub
+    public final SystemErr systemErrRule = new SystemErr(new NoopStream());
 
 
     private FileDAO fileDAO;
 
-    @Before
+    @BeforeEach
     public void setup() {
         DockstoreWebserviceApplication application = SUPPORT.getApplication();
         SessionFactory sessionFactory = application.getHibernate().getSessionFactory();
@@ -92,7 +93,7 @@ public class GitHubWorkflowIT extends BaseIT {
         ManagedSessionContext.bind(session);
 
     }
-    @Before
+    @BeforeEach
     @Override
     public void resetDBBetweenTests() throws Exception {
         CommonTestUtilities.cleanStatePrivate2(SUPPORT, false, testingPostgres);
@@ -111,22 +112,17 @@ public class GitHubWorkflowIT extends BaseIT {
         io.dockstore.openapi.client.ApiClient openAPIWebClient = getOpenAPIWebClient(USER_2_USERNAME, testingPostgres);
 
         // should start with nothing published
-        assertTrue("should start with nothing published ",
-            workflowApi.allPublishedWorkflows(null, null, null, null, null, false, null).isEmpty());
+        assertTrue(workflowApi.allPublishedWorkflows(null, null, null, null, null, false, null).isEmpty(), "should start with nothing published ");
         // refresh just for the current user
         UsersApi usersApi = new UsersApi(webClient);
 
         refreshByOrganizationReplacement(workflowApi, openAPIWebClient);
 
-        assertTrue("should remain with nothing published ",
-            workflowApi.allPublishedWorkflows(null, null, null, null, null, false, null).isEmpty());
+        assertTrue(workflowApi.allPublishedWorkflows(null, null, null, null, null, false, null).isEmpty(), "should remain with nothing published ");
         // ensure that sorting or filtering don't expose unpublished workflows
-        assertTrue("should start with nothing published ",
-            workflowApi.allPublishedWorkflows(null, null, null, "descriptorType", "asc", false, null).isEmpty());
-        assertTrue("should start with nothing published ",
-            workflowApi.allPublishedWorkflows(null, null, "hello", null, null, false, null).isEmpty());
-        assertTrue("should start with nothing published ",
-            workflowApi.allPublishedWorkflows(null, null, "hello", "descriptorType", "asc", false, null).isEmpty());
+        assertTrue(workflowApi.allPublishedWorkflows(null, null, null, "descriptorType", "asc", false, null).isEmpty(), "should start with nothing published ");
+        assertTrue(workflowApi.allPublishedWorkflows(null, null, "hello", null, null, false, null).isEmpty(), "should start with nothing published ");
+        assertTrue(workflowApi.allPublishedWorkflows(null, null, "hello", "descriptorType", "asc", false, null).isEmpty(), "should start with nothing published ");
 
         // assertTrue("should have a bunch of stub workflows: " +  usersApi..allWorkflows().size(), workflowApi.allWorkflows().size() == 4);
 
@@ -137,13 +133,13 @@ public class GitHubWorkflowIT extends BaseIT {
         // publish one
         final PublishRequest publishRequest = CommonTestUtilities.createPublishRequest(true);
         workflowApi.publish(workflowByPath.getId(), publishRequest);
-        assertEquals("should have one published, found  " + workflowApi.allPublishedWorkflows(null, null, null, null, null, false, null).size(),
-            1, workflowApi.allPublishedWorkflows(null, null, null, null, null, false, null).size());
+        assertEquals(1, workflowApi.allPublishedWorkflows(null, null, null, null, null, false, null).size(),
+            "should have one published, found  " + workflowApi.allPublishedWorkflows(null, null, null, null, null, false, null).size());
         final Workflow publishedWorkflow = workflowApi.getPublishedWorkflow(workflowByPath.getId(), null);
-        assertNotNull("did not get published workflow", publishedWorkflow);
+        assertNotNull(publishedWorkflow, "did not get published workflow");
         final Workflow publishedWorkflowByPath = workflowApi
             .getPublishedWorkflowByPath(DOCKSTORE_TEST_USER2_HELLO_DOCKSTORE_WORKFLOW, BIOWORKFLOW, null,  null);
-        assertNotNull("did not get published workflow", publishedWorkflowByPath);
+        assertNotNull(publishedWorkflowByPath, "did not get published workflow");
 
         // publish everything so pagination testing makes more sense (going to unfortunately use rate limit)
         Lists.newArrayList("github.com/" + DOCKSTORE_TEST_USER_2_HELLO_DOCKSTORE_NAME,
@@ -155,14 +151,13 @@ public class GitHubWorkflowIT extends BaseIT {
             });
         List<Workflow> workflows = workflowApi.allPublishedWorkflows(null, null, null, null, null, false, null);
         // test offset
-        assertEquals("offset does not seem to be working",
-            workflowApi.allPublishedWorkflows(1, null, null, null, null, false, null).get(0).getId(), workflows.get(1).getId());
+        assertEquals(workflowApi.allPublishedWorkflows(1, null, null, null, null, false, null).get(0).getId(), workflows.get(1).getId(), "offset does not seem to be working");
         // test limit
         assertEquals(1, workflowApi.allPublishedWorkflows(null, 1, null, null, null, false, null).size());
         // test custom sort column
         List<Workflow> ascId = workflowApi.allPublishedWorkflows(null, null, null, "id", "asc", false, null);
         List<Workflow> descId = workflowApi.allPublishedWorkflows(null, null, null, "id", "desc", false, null);
-        assertEquals("sort by id does not seem to be working", ascId.get(0).getId(), descId.get(descId.size() - 1).getId());
+        assertEquals(ascId.get(0).getId(), descId.get(descId.size() - 1).getId(), "sort by id does not seem to be working");
         // test filter
         List<Workflow> filteredLowercase = workflowApi.allPublishedWorkflows(null, null, "whale", "stars", null, false, null);
         assertEquals(1, filteredLowercase.size());
@@ -173,27 +168,22 @@ public class GitHubWorkflowIT extends BaseIT {
 
         // Tests for subclass
 
-        assertEquals("There should be no app tools published", 0,
-            workflowApi.allPublishedWorkflows(null, null, null, null, null, false,
-                WorkflowSubClass.APPTOOL.getValue()).size());
+        assertEquals(0, workflowApi.allPublishedWorkflows(null, null, null, null, null, false,
+            WorkflowSubClass.APPTOOL.getValue()).size(), "There should be no app tools published");
 
         final int publishedWorkflowsCount = workflowApi.allPublishedWorkflows(null, null, null, null, null, false,
             null).size();
-        assertEquals("An null subclass param defaults to services param value",
-            publishedWorkflowsCount,
-            workflowApi.allPublishedWorkflows(null, null, null, null, null, false,
-                WorkflowSubClass.BIOWORKFLOW.getValue()).size());
+        assertEquals(publishedWorkflowsCount, workflowApi.allPublishedWorkflows(null, null, null, null, null, false,
+            WorkflowSubClass.BIOWORKFLOW.getValue()).size(), "An null subclass param defaults to services param value");
 
         // Create an app tool and publish it
         AppToolHelper.registerAppTool(webClient);
         Workflow appTool = workflowApi.getWorkflowByPath("github.com/" + toolAndWorkflowRepoToolPath, APPTOOL, "versions");
         workflowApi.publish(appTool.getId(), publishRequest);
-        assertEquals("There should be 1 app tool published", 1,
-            workflowApi.allPublishedWorkflows(null, null, null, null, null, false,
-                WorkflowSubClass.APPTOOL.getValue()).size());
-        assertEquals("Published workflow count should be unchanged", publishedWorkflowsCount,
-            workflowApi.allPublishedWorkflows(null, null, null, null, null, false,
-                WorkflowSubClass.BIOWORKFLOW.getValue()).size());
+        assertEquals(1, workflowApi.allPublishedWorkflows(null, null, null, null, null, false,
+            WorkflowSubClass.APPTOOL.getValue()).size(), "There should be 1 app tool published");
+        assertEquals(publishedWorkflowsCount, workflowApi.allPublishedWorkflows(null, null, null, null, null, false,
+            WorkflowSubClass.BIOWORKFLOW.getValue()).size(), "Published workflow count should be unchanged");
     }
 
     /**
@@ -209,7 +199,7 @@ public class GitHubWorkflowIT extends BaseIT {
         //Check image info is grabbed
         Workflow workflow = manualRegisterAndPublish(workflowsApi, "dockstore-testing/hello_world", "", DescriptorType.CWL.toString(), SourceControl.GITHUB, "/hello_world.cwl", true);
         WorkflowVersion version = snapshotWorkflowVersion(workflowsApi, workflow, "1.0.1");
-        assertEquals("Should only be one image in this workflow", 1, version.getImages().size());
+        assertEquals(1, version.getImages().size(), "Should only be one image in this workflow");
         verifyImageChecksumsAreSaved(version);
 
         List<ToolVersion> versions = ga4Ghv20Api.toolsIdVersionsGet("#workflow/github.com/dockstore-testing/hello_world");
@@ -218,7 +208,7 @@ public class GitHubWorkflowIT extends BaseIT {
         // Test that a workflow version that contains duplicate images will not store multiples
         workflow = manualRegisterAndPublish(workflowsApi, "dockstore-testing/zhanghj-8555114", "", DescriptorType.CWL.toString(), SourceControl.GITHUB, "/main.cwl", true);
         WorkflowVersion versionWithDuplicateImages = snapshotWorkflowVersion(workflowsApi, workflow, "1.0");
-        assertEquals("Should have grabbed 3 images", 3, versionWithDuplicateImages.getImages().size());
+        assertEquals(3, versionWithDuplicateImages.getImages().size(), "Should have grabbed 3 images");
         verifyImageChecksumsAreSaved(versionWithDuplicateImages);
         versions = ga4Ghv20Api.toolsIdVersionsGet("#workflow/github.com/dockstore-testing/zhanghj-8555114");
         verifyTRSImageConversion(versions, "1.0", 3);
@@ -234,12 +224,12 @@ public class GitHubWorkflowIT extends BaseIT {
         Workflow workflow = manualRegisterAndPublish(workflowsApi, "dockstore-testing/hello-wdl-workflow", "", DescriptorType.WDL.toString(), SourceControl.GITHUB, "/Dockstore.wdl", true);
         WorkflowVersion version = snapshotWorkflowVersion(workflowsApi, workflow, "quayMultiArchImages");
         // This multi-arch image was created using the buildx method
-        List<Image> buildxImages = version.getImages().stream().filter(image -> "skopeo/stable".equals(image.getRepository())).collect(Collectors.toList());
-        assertTrue("Should have at least 4 images for skopeo/stable@sha256:656733c60ea7a8e45f2c7f0c86b24fc9f388d44c5a7d6d482ec59fbabcdb4eee image", buildxImages.size() >= 4);
+        List<Image> buildxImages = version.getImages().stream().filter(image -> "skopeo/stable".equals(image.getRepository())).toList();
+        assertTrue(buildxImages.size() >= 4, "Should have at least 4 images for skopeo/stable@sha256:656733c60ea7a8e45f2c7f0c86b24fc9f388d44c5a7d6d482ec59fbabcdb4eee image");
         // This multi-arch image was created using the docker manifest method
-        List<Image> dockerManifestImages = version.getImages().stream().filter(image -> "openshift-release-dev/ocp-release".equals(image.getRepository())).collect(Collectors.toList());
-        assertTrue("Should have at least 4 images for openshift-release-dev/ocp-release:4.12.0-0.nightly-multi-2022-08-22-130726 image", dockerManifestImages.size() >= 4);
-        assertTrue("Should have at least 8 images. There are " + version.getImages().size(), version.getImages().size() >= 8);
+        List<Image> dockerManifestImages = version.getImages().stream().filter(image -> "openshift-release-dev/ocp-release".equals(image.getRepository())).toList();
+        assertTrue(dockerManifestImages.size() >= 4, "Should have at least 4 images for openshift-release-dev/ocp-release:4.12.0-0.nightly-multi-2022-08-22-130726 image");
+        assertTrue(version.getImages().size() >= 8, "Should have at least 8 images. There are " + version.getImages().size());
         verifyImageChecksumsAreSaved(version);
 
         List<ToolVersion> versions = ga4Ghv20Api.toolsIdVersionsGet("#workflow/github.com/dockstore-testing/hello-wdl-workflow");
@@ -247,17 +237,18 @@ public class GitHubWorkflowIT extends BaseIT {
     }
 
     private void verifyTRSImageConversion(final List<ToolVersion> versions, final String snapShottedVersionName, final int numImages) {
-        assertFalse("Should have at least one version", versions.isEmpty());
+        assertFalse(versions.isEmpty(), "Should have at least one version");
         boolean snapshotInList = false;
         for (ToolVersion trsVersion : versions) {
             if (trsVersion.getName().equals(snapShottedVersionName)) {
                 assertTrue(trsVersion.isIsProduction());
-                assertTrue(String.format("There should be at least %s image(s) in this workflow. There are %s.", numImages, trsVersion.getImages().size()), trsVersion.getImages().size() >= numImages);
+                assertTrue(trsVersion.getImages().size() >= numImages,
+                    String.format("There should be at least %s image(s) in this workflow. There are %s.", numImages, trsVersion.getImages().size()));
                 snapshotInList = true;
                 assertFalse(trsVersion.getImages().isEmpty());
                 for (ImageData imageData :trsVersion.getImages()) {
                     assertNotNull(imageData.getChecksum());
-                    imageData.getChecksum().stream().forEach(checksum -> {
+                    imageData.getChecksum().forEach(checksum -> {
                         assertEquals(DOCKER_IMAGE_SHA_TYPE_FOR_TRS, checksum.getType());
                         assertFalse(checksum.getChecksum().isEmpty());
                     });
@@ -266,15 +257,15 @@ public class GitHubWorkflowIT extends BaseIT {
                 }
             } else {
                 assertFalse(trsVersion.isIsProduction());
-                assertEquals("Non-snapshotted versions should have 0 images ", 0, trsVersion.getImages().size());
+                assertEquals(0, trsVersion.getImages().size(), "Non-snapshotted versions should have 0 images ");
             }
         }
-        assertTrue("Snapshotted version should be in the list", snapshotInList);
+        assertTrue(snapshotInList, "Snapshotted version should be in the list");
     }
 
     private void verifyImageChecksumsAreSaved(WorkflowVersion version) {
         assertFalse(version.getImages().isEmpty());
-        version.getImages().stream().forEach(image -> image.getChecksums().stream().forEach(checksum -> {
+        version.getImages().forEach(image -> image.getChecksums().forEach(checksum -> {
             assertFalse(checksum.getChecksum().isEmpty());
             assertFalse(checksum.getType().isEmpty());
         })
@@ -293,7 +284,7 @@ public class GitHubWorkflowIT extends BaseIT {
         // Test that an image referenced by digest is grabbed correctly
         Workflow workflow = manualRegisterAndPublish(workflowsApi, "dockstore-testing/hello-wdl-workflow", "", DescriptorType.WDL.toString(), SourceControl.GITHUB, "/Dockstore.wdl", true);
         WorkflowVersion version = snapshotWorkflowVersion(workflowsApi, workflow, "ghcrImages");
-        assertTrue("Should have at least 7 images. There are " + version.getImages().size(), version.getImages().size() >= 7);
+        assertTrue(version.getImages().size() >= 7, "Should have at least 7 images. There are " + version.getImages().size());
         verifyImageChecksumsAreSaved(version);
 
         List<ToolVersion> versions = ga4Ghv20Api.toolsIdVersionsGet("#workflow/github.com/dockstore-testing/hello-wdl-workflow");
@@ -311,7 +302,7 @@ public class GitHubWorkflowIT extends BaseIT {
         // Test that an image referenced by digest is grabbed correctly
         Workflow workflow = manualRegisterAndPublish(workflowsApi, "dockstore-testing/hello-wdl-workflow", "", DescriptorType.WDL.toString(), SourceControl.GITHUB, "/Dockstore.wdl", true);
         WorkflowVersion version = snapshotWorkflowVersion(workflowsApi, workflow, "ecrImages");
-        assertTrue("Should have at least 6 images. There are " + version.getImages().size(), version.getImages().size() >= 6);
+        assertTrue(version.getImages().size() >= 6, "Should have at least 6 images. There are " + version.getImages().size());
         verifyImageChecksumsAreSaved(version);
 
         List<ToolVersion> versions = ga4Ghv20Api.toolsIdVersionsGet("#workflow/github.com/dockstore-testing/hello-wdl-workflow");
@@ -341,7 +332,7 @@ public class GitHubWorkflowIT extends BaseIT {
                 List<io.dockstore.webservice.core.SourceFile> sourceFiles = fileDAO.findSourceFilesByVersion(workflowVersion.getId());
                 assertNotNull(sourceFiles);
                 verifySourcefileChecksumsSaved(sourceFiles);
-                sourceFiles.stream().forEach(sourceFile -> assertFalse("Source file should have a checksum", sourceFile.getChecksums().get(0).toString().isEmpty()));
+                sourceFiles.forEach(sourceFile -> assertFalse(sourceFile.getChecksums().get(0).toString().isEmpty(), "Source file should have a checksum"));
             }
         }
         assertTrue(testedWDL);
@@ -377,7 +368,7 @@ public class GitHubWorkflowIT extends BaseIT {
 
     private void verifyTRSSourcefileConversion(final io.dockstore.openapi.client.model.FileWrapper fileWrapper) {
         assertEquals(1, fileWrapper.getChecksum().size());
-        fileWrapper.getChecksum().stream().forEach(checksum -> {
+        fileWrapper.getChecksum().forEach(checksum -> {
             assertFalse(checksum.getChecksum().isEmpty());
             assertEquals(DESCRIPTOR_FILE_SHA256_TYPE_FOR_TRS, checksum.getType());
         });
@@ -385,11 +376,11 @@ public class GitHubWorkflowIT extends BaseIT {
 
     private void verifySourcefileChecksumsSaved(final List<io.dockstore.webservice.core.SourceFile> sourceFiles) {
         assertTrue(sourceFiles.size() >= 1);
-        sourceFiles.stream().forEach(sourceFile -> {
-            assertFalse("Source File should have a checksum", sourceFile.getChecksums().isEmpty());
+        sourceFiles.forEach(sourceFile -> {
+            assertFalse(sourceFile.getChecksums().isEmpty(), "Source File should have a checksum");
             assertTrue(sourceFile.getChecksums().size() >= 1);
-            sourceFile.getChecksums().stream().forEach(checksum -> {
-                assertEquals(io.dockstore.webservice.core.SourceFile.SHA_TYPE, checksum.getType());
+            sourceFile.getChecksums().forEach(checksum -> {
+                assertEquals(SourceFile.SHA_TYPE, checksum.getType());
                 assertFalse(checksum.getChecksum().isEmpty());
             });
         });
@@ -417,37 +408,36 @@ public class GitHubWorkflowIT extends BaseIT {
         // Workflow with Quay image specified using a tag
         String quayTagVersionName = "1.0";
         snapshotVersion = snapshotWorkflowVersion(workflowsApi, workflow, quayTagVersionName);
-        assertEquals("Should only be one image in this workflow", 1, snapshotVersion.getImages().size());
+        assertEquals(1, snapshotVersion.getImages().size(), "Should only be one image in this workflow");
         trsVersion = ga4Ghv20Api.toolsIdVersionsVersionIdGet("#workflow/github.com/dockstore-testing/hello-wdl-workflow", quayTagVersionName);
-        assertEquals("Should be one image in this TRS version", 1, trsVersion.getImages().size());
-        trsVersion.getImages().stream().forEach(image -> assertEquals("quay.io/ga4gh-dream/dockstore-tool-helloworld:1.0.2", image.getImageName()));
+        assertEquals(1, trsVersion.getImages().size(), "Should be one image in this TRS version");
+        trsVersion.getImages().forEach(image -> assertEquals("quay.io/ga4gh-dream/dockstore-tool-helloworld:1.0.2", image.getImageName()));
 
         // Workflow with Quay image specified using a digest
         String quayDigestVersionName = "quayDigestImage";
         snapshotVersion = snapshotWorkflowVersion(workflowsApi, workflow, quayDigestVersionName);
-        assertEquals("Should only be one image in this workflow", 1, snapshotVersion.getImages().size());
+        assertEquals(1, snapshotVersion.getImages().size(), "Should only be one image in this workflow");
         trsVersion = ga4Ghv20Api.toolsIdVersionsVersionIdGet("#workflow/github.com/dockstore-testing/hello-wdl-workflow", quayDigestVersionName);
-        assertEquals("Should be one image in this TRS version", 1, trsVersion.getImages().size());
-        trsVersion.getImages().stream().forEach(image -> assertEquals(
-            "quay.io/ga4gh-dream/dockstore-tool-helloworld@sha256:3a854fd1ebd970011fa57c8c099347314eda36cc746fd831f4deff9a1d433718",
-            image.getImageName()));
+        assertEquals(1, trsVersion.getImages().size(), "Should be one image in this TRS version");
+        trsVersion.getImages().forEach(image -> assertEquals(
+            "quay.io/ga4gh-dream/dockstore-tool-helloworld@sha256:3a854fd1ebd970011fa57c8c099347314eda36cc746fd831f4deff9a1d433718", image.getImageName()));
 
         // Workflow with Docker Hub image specified using a tag (6 images actually retrieved, one per architecture type)
         String dockerHubTagVersionName = "dockerHubTagImage";
         snapshotVersion = snapshotWorkflowVersion(workflowsApi, workflow, dockerHubTagVersionName);
-        assertEquals("Should only be six images in this workflow", 6, snapshotVersion.getImages().size()); // 1 image per architecture type
+        assertEquals(6, snapshotVersion.getImages().size(), "Should only be six images in this workflow"); // 1 image per architecture type
         trsVersion = ga4Ghv20Api.toolsIdVersionsVersionIdGet("#workflow/github.com/dockstore-testing/hello-wdl-workflow", dockerHubTagVersionName);
-        assertEquals("Should be six images in this TRS version", 6, trsVersion.getImages().size());
-        trsVersion.getImages().stream().forEach(image -> assertEquals("library/ubuntu:16.04", image.getImageName()));
+        assertEquals(6, trsVersion.getImages().size(), "Should be six images in this TRS version");
+        trsVersion.getImages().forEach(image -> assertEquals("library/ubuntu:16.04", image.getImageName()));
 
         // Workflow with Docker Hub image specified using a digest
         String dockerHubDigestVersionName = "dockerHubDigestImage";
         snapshotVersion = snapshotWorkflowVersion(workflowsApi, workflow, dockerHubDigestVersionName);
-        assertEquals("Should only be one image in this workflow", 1, snapshotVersion.getImages().size());
+        assertEquals(1, snapshotVersion.getImages().size(), "Should only be one image in this workflow");
         trsVersion = ga4Ghv20Api.toolsIdVersionsVersionIdGet("#workflow/github.com/dockstore-testing/hello-wdl-workflow", dockerHubDigestVersionName);
-        assertEquals("Should be one image in this TRS version", 1, trsVersion.getImages().size());
+        assertEquals(1, trsVersion.getImages().size(), "Should be one image in this TRS version");
         // library/ubuntu@sha256:d7bb0589725587f2f67d0340edb81fd1fcba6c5f38166639cf2a252c939aa30c refers to ubuntu version 16.04, amd64 os/arch
-        trsVersion.getImages().stream().forEach(image ->
+        trsVersion.getImages().forEach(image ->
             assertEquals("library/ubuntu@sha256:d7bb0589725587f2f67d0340edb81fd1fcba6c5f38166639cf2a252c939aa30c", image.getImageName()));
     }
 
@@ -462,7 +452,7 @@ public class GitHubWorkflowIT extends BaseIT {
         // DockerHub images are grabbed correctly broadinstitute/gatk:4.0.1.1
         Workflow workflow = manualRegisterAndPublish(workflowsApi, "dockstore-testing/broad-prod-wgs-germline-snps-indels", "", DescriptorType.WDL.toString(), SourceControl.GITHUB, "/JointGenotypingWf.wdl", true);
         WorkflowVersion version = snapshotWorkflowVersion(workflowsApi, workflow, "1.1.2");
-        assertEquals("Should 10 images in this workflow", 10, version.getImages().size());
+        assertEquals(10, version.getImages().size(), "Should 10 images in this workflow");
         verifyImageChecksumsAreSaved(version);
 
         List<ToolVersion> versions = ga4Ghv20Api.toolsIdVersionsGet("#workflow/github.com/dockstore-testing/broad-prod-wgs-germline-snps-indels");
@@ -490,12 +480,12 @@ public class GitHubWorkflowIT extends BaseIT {
             assertEquals("Peter Amstutz", workflow.getAuthor());
             assertTrue(workflow.getWorkflowVersions().stream().anyMatch(versions -> "master".equals(versions.getName())));
         });
-        assertEquals("Default branch should've been set to get metadata", "master", workflow.getDefaultVersion());
+        assertEquals("master", workflow.getDefaultVersion(), "Default branch should've been set to get metadata");
         assertEquals("peter.amstutz@curoverse.com", workflow.getEmail());
         assertEquals("Print the contents of a file to stdout using 'cat' running in a docker container.", workflow.getDescription());
         assertEquals("Peter Amstutz", workflow.getAuthor());
         assertTrue(workflow.getWorkflowVersions().stream().anyMatch(versions -> "master".equals(versions.getName())));
-        assertEquals("Default version should've been set to get metadata", "master", workflow.getDefaultVersion());
+        assertEquals("master", workflow.getDefaultVersion(), "Default version should've been set to get metadata");
         Optional<WorkflowVersion> optionalWorkflowVersion = workflow.getWorkflowVersions().stream()
             .filter(version -> "master".equalsIgnoreCase(version.getName())).findFirst();
         assertTrue(optionalWorkflowVersion.isPresent());
